email verification and resent email apis done
