# routes/auth.route.js
@@ -5,10 +5,22 @@ const {
   loginValidation,
   registerValidation,
   refreshTokenValidation,
+  resendEmailVerification,
+  emailVerificationValidation,
 } = require("../validationSchema/auth-schema");
 
 router.post("/register", registerValidation, authController.register);
 router.post("/login", loginValidation, authController.login);
 router.post("/token", refreshTokenValidation, authController.refreshToken);
+router.post(
+  "/verify-email",
+  emailVerificationValidation,
+  authController.verifyEmail
+);
+router.post(
+  "/resend-email-verification",
+  resendEmailVerification,
+  authController.resendEmailVerificationMail
+);
 
 module.exports = router;
